syntax = "proto3";
package claw.workstream;

import "claw/common.proto";
import "claw/objects.proto";

service WorkstreamService {
  rpc Create(CreateWorkstreamRequest) returns (CreateWorkstreamResponse);
  rpc Get(GetWorkstreamRequest) returns (GetWorkstreamResponse);
  rpc PushChange(PushChangeRequest) returns (PushChangeResponse);
  rpc PopChange(PopChangeRequest) returns (PopChangeResponse);
}

message CreateWorkstreamRequest {
  string name = 1;
}

message CreateWorkstreamResponse {
  claw.objects.Workstream workstream = 1;
}

message GetWorkstreamRequest {
  string name = 1;
}

message GetWorkstreamResponse {
  claw.objects.Workstream workstream = 1;
}

message PushChangeRequest {
  string workstream_name = 1;
  claw.common.Ulid change_id = 2;
}

message PushChangeResponse {
  bool success = 1;
}

message PopChangeRequest {
  string workstream_name = 1;
}

message PopChangeResponse {
  claw.common.Ulid change_id = 1;
}
